# phil_robot

./: .gitignore  CLAUDE.md  OPERATING.md  README.md  pyproject.toml  requirements.txt
.claude/: ARCHITECTURE.md  CLAUDE.md  FINDINGS.md  FUTURE-microstep-reflash.md  LEARNINGS.md  REFLASH-PROGRESS.md  RULES.md  TROUBLESHOOTING.md  UNITS-AND-CALIBRATION.md  V2-FIRMWARE-NOTES.md  V2-GOTO-FIXES.md
.claude/learnings/: robot-kinematics-and-frames.md
.claude/skills/jog/: SKILL.md
.claude/tools/: capframe.py  crop.py
firmware/octopi_firmware_v2/main_controller_teensy41/: def_octopi_80120.h  def_phil.h  main_controller_teensy41.ino
software/: fit_offline.py  overlay_model_vs_json.py  test_20240823.py  zprobe.py
software/phil/: README.md  __init__.py  calibration.py  cli.py  constants.py  drive.py  jog_teach.py  kinematics.py  legacy_mc.py  measure.py  paths.py  phil_robot.py  rehome.py  robot.py  selftest.py  stepcheck.py  teach.py  tiptrack.py  viz.py  well_map.py  well_plate.py
software/phil/config/: phil_calibration.json  phil_kinematics.json  phil_teach.json
software/phil/custom_labware/: BioRad 96 Well Plate 200 µL.json  thermofisher_60180p109_384_wellplate_30ul.json
software/phil/geometry/: __init__.py  calibration.py  kinematics.py  teach.py  well_plate.py
software/phil/hardware/: __init__.py  legacy_mc.py  v2_mc.py
software/phil/labware/: Opentrons 96 PCR Adapter with BioRad Well Plate 200 uL.json  _generate_96_labware.py  (+6 more)
tests/: conftest.py  test_coordinated_approach.py  test_frame_split.py  test_grid_predict.py  test_smoke.py
(+7 files in other folders)
